Mobile overlap fix

--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -131,6 +131,10 @@ nav {
     }
   }
 
+  .showcase .title {
+    margin-top: 30%;
+  }
+
   .hometogallery {
     font-size: 3rem;
   }
@@ -166,6 +170,9 @@ nav {
     top: 0;
     left: 0;
     padding: 5px;
+  }
+  .showcase .herobuttoncontainer {
+    top: 75%;
   }
   .hometogallery {
     font-size: 2rem;
